# AccessiSky

./: .gitignore  CHANGELOG.md  LICENSE  README.md  ROADMAP.md  pyproject.toml
.claude/: settings.json
.githooks/: pre-push
.github/scripts/: push_releases.py
.github/workflows/: build.yml  ci.yml  push-releases.yml  update-wordpress.yml
installer/: accessisky.spec  build.py
src/accessisky/: __main__.py  app.py
src/accessisky/api/: __init__.py  aurora.py  briefing.py  darksky.py  eclipses.py  geocoding.py  iss.py  meteors.py  moon.py  planets.py  sun.py  tonight.py  viewing.py  weather.py
src/accessisky/ui/: main_window.py
src/accessisky/ui/dialogs/: __init__.py  location.py
tests/: test_app.py  test_aurora_api.py  test_briefing_api.py  test_darksky_api.py  test_darksky_coverage.py  test_eclipses_api.py  test_geocoding_api.py  test_iss_api.py  test_meteor_api.py  test_moon_api.py  test_planets_api.py  test_sun_api.py  test_tonight_api.py  test_viewing_conditions.py  test_weather_api.py
